--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <resources>
     <string name="action_retry">Ulangi</string>
-    <string name="action_see_all">See All</string>
+    <string name="action_view_all">View All</string>
 
     <string name="app_name">Movies</string>
 
@@ -19,6 +19,7 @@
     <string name="message_empty_movies">No Movies</string>
     <string name="message_empty_reviews">No Reviews</string>
     <string name="message_error_founded">Something error founded</string>
+    <string name="message_empty_videos">No Videos</string>
 
     <string name="sample_date">11 November 2020</string>
     <string name="sample_duration">2h1m</string>
@@ -27,5 +28,5 @@
     <string name="sample_original_language">English</string>
     <string name="sample_status">Release</string>
     <string name="sample_vote">4.4</string>
-    <string name="message_empty_videos">No Videos</string>
+
 </resources>
